<resources>
    <string name="app_name">AudioPlayer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">Favourite</string>
    <string name="delete">Delete</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="welcome_to_audio_player">Welcome to Audio Player</string>
    <string name="redefine_music">Redefine Music</string>
    <string name="explore_the_feature">Explore the feature</string>
    <string name="go_to_album">Go To Album</string>
    <string name="go_to_artist">Go To Artist</string>
    <string name="share">Share</string>
    <string name="details">Details</string>
    <string name="file_path">File Path</string>
    <string name="file_name">File Name</string>
    <string name="size">Size</string>
    <string name="length">Length</string>
    <string name="file_size">File Size</string>
    <string name="set_as_ringtone">Set as Ringtone</string>
    <string name="set_ringtone">Set Ringtone</string>
    <string name="message_set_ringtone">Allow Audio Player to modify audio settings</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="song_has_been_set_as_ringtone">Set %1$s as your ringtone.</string>
    <string name="songs">Songs</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="playlist">Playlist</string>
    <string name="channel_description">Play Audio FIles</string>
    <string name="album_name">Album Name</string>
    <string name="songs_count">Songs Count</string>
</resources>